Example of auth.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,21 @@
 ! Here we put some project settings, there are many ways to set things up like trough beans and xml files.
 server.port=8085
 ! In next lessons we will add here thymeleaf and postgres settings
+
+#DB Connection
+#spring.datasource.url=jdbc:postgresql://localhost:5432/tw_db?currentSchema=public&user=postgres&password=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/tw_db
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+## Thymeleaf
+spring.thymeleaf.template-loader-path: classpath:/templates
+spring.thymeleaf.suffix: .html
+spring.thymeleaf.cache: false
+
+spring.messages.basename=validation
