Added a course entity and CRUD operation on it

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,4 +1,5 @@
 user.isUsernameEmpty=Please fill the field
+role.isRoleEmpty=Please fill the field
 user.isPasswordEmpty=Please fill the field
 user.isValidUserLength=Please use between 2 and 32 characters.
 user.isValidEmail=Invalid email format
