--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 ! Here we put some project settings, there are many ways to set things up like trough beans and xml files.
 server.port=8085
-! In next lessons we will add here thymeleaf and postgres settings
 
 #DB Connection
-#spring.datasource.url=jdbc:postgresql://localhost:5432/tw_db?currentSchema=public&user=postgres&password=admin
-spring.datasource.url=jdbc:postgresql://localhost:5432/tw_db
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://INSERT_DB_ENDPOINT/DATABASE_NAME
+spring.datasource.username=INSERT_USERNAME
+spring.datasource.password=INSERT_PASSWORD
 
+#DB Connection
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
